# Nomic-Bot

./: TODO.txt  google_secret.json  main.py  pyproject.toml  sheets.py  timer.py  twitch.py
