[tool.poetry]
name = "nomic-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"
discord = "^1.0.1"
gspread = "^3.7.0"
oauth2client = "^4.1.3"
websockets = "^8.1"
timer = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
